--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,7 +2,7 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
+    - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
 
 jobs:
   update-password:
@@ -10,24 +10,16 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Select Random Password
         id: select_password
         run: |
-          # Split the passwords from the secret into an array
           IFS=',' read -r -a passwords <<< "${{ secrets.PASSWORDS }}"
-          
-          # Get a random password from the array
           random_password=${passwords[RANDOM % ${#passwords[@]}]}
-          
           echo "Selected password: $random_password"
-          
-          # Save the random password to a file
           echo "$random_password" > selected_password.txt
-          
-          # Set the output variable for debugging
-          echo "::set-output name=password::$random_password"
+          echo "password=$random_password" >> $GITHUB_ENV
 
       - name: Commit and Push Changes
         run: |
