--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,7 +2,7 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
+    - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
 
 jobs:
   update-password:
@@ -15,16 +15,22 @@ jobs:
       - name: Select Random Password
         id: select_password
         run: |
+          # Split the passwords from Firebase into an array
           IFS=',' read -r -a passwords <<< "${{ secrets.PASSWORDS }}"
+
+          # Get a random password from the array
           random_password=${passwords[RANDOM % ${#passwords[@]}]}
+
           echo "Selected password: $random_password"
-          echo "$random_password" > selected_password.txt
-          echo "password=$random_password" >> $GITHUB_ENV
+
+          # Save the random password to an environment file
+          echo "RANDOM_PASSWORD=$random_password" >> $GITHUB_ENV
 
       - name: Commit and Push Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          echo "$RANDOM_PASSWORD" > selected_password.txt
           git add selected_password.txt
           git commit -m "Update selected password"
           git push
