--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Retrieve Weekly Password from Firebase
         run: |
           # Retrieve the password from Firebase Realtime Database
-          weekly_password=$(firebase database:get /Data/password -P your-firebase-project-id)
+          weekly_password=$(firebase database:get /Data/password -P pixelwarnew)
           echo "Weekly password: $weekly_password"
           
           # Save the password to a file
