--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -3,6 +3,8 @@ name: Update Password
 on:
   schedule:
     - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
+  workflow_dispatch:     # This allows manual triggering of the workflow
+
 
 jobs:
   update-password:
