--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: Authenticate Firebase
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
-          firebase login:ci --token "$FIREBASE_TOKEN"
+          firebase login:ci --token "$FIREBASE_SERVICE_ACCOUNT_KEY"
         
       - name: Retrieve Weekly Password from Firebase
         run: |
