--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -5,7 +5,6 @@ on:
     - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
   workflow_dispatch:     # This allows manual triggering of the workflow
 
-
 jobs:
   update-password:
     runs-on: ubuntu-latest
@@ -20,11 +19,14 @@ jobs:
 
       - name: Authenticate Firebase
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
-          firebase login:ci --token "$FIREBASE_SERVICE_ACCOUNT_KEY"
-        
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}" > "${HOME}/firebase_key.json"
+          export GOOGLE_APPLICATION_CREDENTIALS="${HOME}/firebase_key.json"
+
       - name: Retrieve Weekly Password from Firebase
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
         run: |
           # Retrieve the password from Firebase Realtime Database
           weekly_password=$(firebase database:get /Data/password -P pixelwarnew)
