--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -11,18 +11,18 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3  # Update to the latest version
+        uses: actions/checkout@v3
+
+      - name: Set up Service Account Key
+        env:
+          FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
+        run: |
+          echo "$FIREBASE_SERVICE_ACCOUNT_KEY" > "${HOME}/firebase_key.json"
+          export GOOGLE_APPLICATION_CREDENTIALS="${HOME}/firebase_key.json"
 
       - name: Install Firebase CLI
         run: |
           curl -sL https://firebase.tools | bash
-
-      - name: Authenticate Firebase
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
-        run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}" > "${HOME}/firebase_key.json"
-          export GOOGLE_APPLICATION_CREDENTIALS="${HOME}/firebase_key.json"
 
       - name: Retrieve Weekly Password from Firebase
         env:
