--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -24,18 +24,29 @@ jobs:
         run: |
           curl -sL https://firebase.tools | bash
 
+      - name: Verify Firebase CLI Setup
+        run: |
+          # Verify Firebase CLI setup and check project
+          firebase projects:list || exit 1
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
+
       - name: Retrieve Weekly Password from Firebase
         env:
           GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
         run: |
-          # Retrieve the password from Firebase Realtime Database
-          weekly_password=$(firebase database:get /Data/password -P pixelwarnew)
-          echo "Weekly password: $weekly_password"
-          
-          # Save the password to a file
-          echo "$weekly_password" > selected_password.txt
+          # Retrieve the password from Firebase Realtime Database and handle potential errors
+          weekly_password=$(firebase database:get /Data/password -P pixelwarnew 2>/dev/null || echo "Error retrieving password")
+          if [[ "$weekly_password" == "Error retrieving password" ]]; then
+            echo "Failed to retrieve password from Firebase"
+            exit 1
+          else
+            echo "Weekly password: $weekly_password"
+            echo "$weekly_password" > selected_password.txt
+          fi
 
       - name: Commit and Push Changes
+        if: success()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
