--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,8 +2,8 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
-  workflow_dispatch:     # This allows manual triggering of the workflow
+    - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
+  workflow_dispatch:       # Allows manual triggering of the workflow
 
 jobs:
   update-password:
@@ -18,32 +18,48 @@ jobs:
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
           echo "$FIREBASE_SERVICE_ACCOUNT_KEY" > "${HOME}/firebase_key.json"
-          export GOOGLE_APPLICATION_CREDENTIALS="${HOME}/firebase_key.json"
 
-      - name: Install Firebase CLI
-        run: |
-          curl -sL https://firebase.tools | bash
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Use a supported Node.js version for firebase-admin
 
-      - name: Verify Firebase CLI Setup
-        run: |
-          # Verify Firebase CLI setup and check project
-          firebase projects:list || exit 1
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
+      - name: Install Firebase Admin SDK
+        run: npm install firebase-admin
 
       - name: Retrieve Weekly Password from Firebase
         env:
           GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
         run: |
-          # Retrieve the password from Firebase Realtime Database and handle potential errors
-          weekly_password=$(firebase database:get /Data/password -P pixelwarnew 2>/dev/null || echo "Error retrieving password")
-          if [[ "$weekly_password" == "Error retrieving password" ]]; then
-            echo "Failed to retrieve password from Firebase"
-            exit 1
-          else
-            echo "Weekly password: $weekly_password"
-            echo "$weekly_password" > selected_password.txt
-          fi
+          cat << 'EOF' > retrieve-password.js
+          const admin = require('firebase-admin');
+          const fs = require('fs');
+          
+          // Initialize Firebase with the service account
+          admin.initializeApp({
+            credential: admin.credential.applicationDefault(),
+            databaseURL: "https://pixelwarnew-default-rtdb.europe-west1.firebasedatabase.app"
+          });
+          
+          // Reference to the password node
+          const db = admin.database();
+          const ref = db.ref("Data/password");
+
+          ref.once("value", (snapshot) => {
+            const weeklyPassword = snapshot.val();
+            console.log("Weekly password:", weeklyPassword);
+
+            // Write the password to a file
+            fs.writeFileSync("selected_password.txt", weeklyPassword);
+            process.exit(0); // Exit successfully
+          }, (error) => {
+            console.error("Error retrieving password:", error);
+            process.exit(1); // Exit with error
+          });
+          EOF
+
+          # Run the Node.js script
+          node retrieve-password.js
 
       - name: Commit and Push Changes
         if: success()
