--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,8 +2,8 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
-  workflow_dispatch:       # Allows manual triggering of the workflow
+    - cron: '0 0 * * 0'  # Every Sunday at 00:00 UTC
+  workflow_dispatch:     # Manual trigger
 
 jobs:
   update-password:
@@ -17,52 +17,31 @@ jobs:
         env:
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
-          echo "$FIREBASE_SERVICE_ACCOUNT_KEY" > "${HOME}/firebase_key.json"
+          # Write the service account key to a file
+          printf "%s" "$FIREBASE_SERVICE_ACCOUNT_KEY" > "$HOME/firebase_key.json"
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase_key.json"
+          
+          # Verify file creation and contents
+          echo "Service Account Key saved at: $HOME/firebase_key.json"
+          ls -l $HOME/firebase_key.json
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # Use a supported Node.js version for firebase-admin
-
-      - name: Install Firebase Admin SDK
-        run: npm install firebase-admin
+      - name: Install Firebase CLI
+        run: |
+          curl -sL https://firebase.tools | bash
 
       - name: Retrieve Weekly Password from Firebase
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase_key.json"
         run: |
-          cat << 'EOF' > retrieve-password.js
-          const admin = require('firebase-admin');
-          const fs = require('fs');
+          # Verify Firebase CLI setup and check project
+          firebase projects:list
           
-          // Initialize Firebase with the service account
-          admin.initializeApp({
-            credential: admin.credential.applicationDefault(),
-            databaseURL: "https://pixelwarnew-default-rtdb.europe-west1.firebasedatabase.app"
-          });
+          # Retrieve the password from Firebase Realtime Database
+          weekly_password=$(firebase database:get /Data/password -P pixelwarnew)
+          echo "Weekly password: $weekly_password"
           
-          // Reference to the password node
-          const db = admin.database();
-          const ref = db.ref("Data/password");
-
-          ref.once("value", (snapshot) => {
-            const weeklyPassword = snapshot.val();
-            console.log("Weekly password:", weeklyPassword);
-
-            // Write the password to a file
-            fs.writeFileSync("selected_password.txt", weeklyPassword);
-            process.exit(0); // Exit successfully
-          }, (error) => {
-            console.error("Error retrieving password:", error);
-            process.exit(1); // Exit with error
-          });
-          EOF
-
-          # Run the Node.js script
-          node retrieve-password.js
+          # Save the password to a file
+          echo "$weekly_password" > selected_password.txt
 
       - name: Commit and Push Changes
-        if: success()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
