--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -19,27 +19,46 @@ jobs:
         run: |
           # Write the service account key to a file
           printf "%s" "$FIREBASE_SERVICE_ACCOUNT_KEY" > "$HOME/firebase_key.json"
-          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/firebase_key.json"
           
-          # Verify file creation and contents
-          echo "Service Account Key saved at: $HOME/firebase_key.json"
-          ls -l $HOME/firebase_key.json
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18' # or a supported Node.js version
 
-      - name: Install Firebase CLI
-        run: |
-          curl -sL https://firebase.tools | bash
+      - name: Install Firebase Admin SDK
+        run: npm install firebase-admin
 
       - name: Retrieve Weekly Password from Firebase
         run: |
-          # Verify Firebase CLI setup and check project
-          firebase projects:list
-          
-          # Retrieve the password from Firebase Realtime Database
-          weekly_password=$(firebase database:get /Data/password -P pixelwarnew)
-          echo "Weekly password: $weekly_password"
-          
-          # Save the password to a file
-          echo "$weekly_password" > selected_password.txt
+          # Create a Node.js script to retrieve password from Firebase
+          cat << 'EOF' > retrieve-password.js
+          const admin = require('firebase-admin');
+          const fs = require('fs');
+
+          // Initialize Firebase Admin SDK
+          admin.initializeApp({
+            credential: admin.credential.cert(process.env.GOOGLE_APPLICATION_CREDENTIALS),
+            databaseURL: "https://pixelwarnew.firebaseio.com"  // Replace with your database URL
+          });
+
+          // Reference to Firebase Realtime Database
+          const db = admin.database();
+
+          // Retrieve the weekly password
+          db.ref('/Data/password').once('value', (snapshot) => {
+            const weeklyPassword = snapshot.val();
+            console.log("Weekly password:", weeklyPassword);
+            
+            // Save the password to a file
+            fs.writeFileSync('selected_password.txt', weeklyPassword);
+          }).catch((error) => {
+            console.error("Error retrieving password:", error);
+            process.exit(1); // Exit with error code for GitHub Actions
+          });
+          EOF
+
+          # Run the Node.js script
+          node retrieve-password.js
 
       - name: Commit and Push Changes
         run: |
@@ -48,3 +67,5 @@ jobs:
           git add selected_password.txt
           git commit -m "Update selected password"
           git push
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase_key.json
