--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,8 +2,8 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Every Sunday at 00:00 UTC
-  workflow_dispatch:     # Manual trigger
+    - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
+  workflow_dispatch:     # Allows manual triggering of the workflow
 
 jobs:
   update-password:
@@ -11,33 +11,31 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Update to the latest version
 
-      - name: Set up Service Account Key
-        env:
-          FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
-        run: |
-          # Write the service account key to a file
-          printf "%s" "$FIREBASE_SERVICE_ACCOUNT_KEY" > "$HOME/firebase_key.json"
-          
-      - name: Install Node.js
+      - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # or a supported Node.js version
+          node-version: '18'  # Ensure compatibility with your Node.js script
 
       - name: Install Firebase Admin SDK
         run: npm install firebase-admin
 
       - name: Retrieve Weekly Password from Firebase
+        env:
+          FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
           # Create a Node.js script to retrieve password from Firebase
           cat << 'EOF' > retrieve-password.js
           const admin = require('firebase-admin');
           const fs = require('fs');
 
+          // Parse the service account JSON from environment variable
+          const serviceAccount = JSON.parse(process.env.FIREBASE_SERVICE_ACCOUNT_KEY);
+
           // Initialize Firebase Admin SDK
           admin.initializeApp({
-            credential: admin.credential.cert(process.env.GOOGLE_APPLICATION_CREDENTIALS),
+            credential: admin.credential.cert(serviceAccount),
             databaseURL: "https://pixelwarnew.firebaseio.com"  // Replace with your database URL
           });
 
@@ -67,5 +65,3 @@ jobs:
           git add selected_password.txt
           git commit -m "Update selected password"
           git push
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase_key.json
