--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -36,7 +36,7 @@ jobs:
           // Initialize Firebase Admin SDK
           admin.initializeApp({
             credential: admin.credential.cert(serviceAccount),
-            databaseURL: "https://pixelwarnew.firebaseio.com"  // Replace with your database URL
+            databaseURL: "https://pixelwarnew-default-rtdb.europe-west1.firebasedatabase.app/"  // Replace with your database URL
           });
 
           // Reference to Firebase Realtime Database
