--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -42,13 +42,18 @@ jobs:
           // Reference to Firebase Realtime Database
           const db = admin.database();
 
-          // Retrieve the weekly password
-          db.ref('/Data/password').once('value', (snapshot) => {
+          // Retrieve the weekly password from the first entry in the "password" object
+          db.ref('/Data/passwords/1').once('value', (snapshot) => {
             const weeklyPassword = snapshot.val();
             console.log("Weekly password:", weeklyPassword);
             
-            // Save the password to a file
-            fs.writeFileSync('selected_password.txt', weeklyPassword);
+            if (weeklyPassword) {
+              // Save the password to a file
+              fs.writeFileSync('selected_password.txt', weeklyPassword);
+            } else {
+              console.error("No password found at /Data/passwords/1.");
+              process.exit(1); // Exit with error code for GitHub Actions
+            }
           }).catch((error) => {
             console.error("Error retrieving password:", error);
             process.exit(1); // Exit with error code for GitHub Actions
