--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -42,8 +42,8 @@ jobs:
           // Reference to Firebase Realtime Database
           const db = admin.database();
 
-          // Retrieve the weekly password from the first entry in the "password" object
-          db.ref('/Data/password/1').once('value', (snapshot) => {
+          // Retrieve the weekly password from the first entry in the "Password" object
+          db.ref('/Data/Password/1').once('value', (snapshot) => {
             const weeklyPassword = snapshot.val();
             console.log("Weekly password:", weeklyPassword);
             
@@ -51,7 +51,7 @@ jobs:
               // Save the password to a file
               fs.writeFileSync('selected_password.txt', weeklyPassword);
             } else {
-              console.error("No password found at /Data/password/1.");
+              console.error("No password found at /Data/Password/1.");
               process.exit(1); // Exit with error code for GitHub Actions
             }
           }).catch((error) => {
