--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -42,7 +42,7 @@ jobs:
           // Reference to Firebase Realtime Database
           const db = admin.database();
 
-          // Retrieve the weekly password from the first entry in the "Password" object
+          // Retrieve the weekly password from the second entry in the "Password" object
           db.ref('/Data/Password/1').once('value', (snapshot) => {
             const weeklyPassword = snapshot.val();
             console.log("Weekly password:", weeklyPassword);
@@ -50,6 +50,7 @@ jobs:
             if (weeklyPassword) {
               // Save the password to a file
               fs.writeFileSync('selected_password.txt', weeklyPassword);
+              console.log("Password saved to selected_password.txt");
             } else {
               console.error("No password found at /Data/Password/1.");
               process.exit(1); // Exit with error code for GitHub Actions
@@ -63,10 +64,17 @@ jobs:
           # Run the Node.js script
           node retrieve-password.js
 
-      - name: Commit and Push Changes
+      - name: Check for File Changes and Commit
         run: |
+          # Check if the password file was changed
+          git status
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add selected_password.txt
-          git commit -m "Update selected password"
-          git push
+          git status  # Check staging status
+          git commit -m "Update selected password" || echo "No changes to commit"
+          git push || echo "Push failed"
+
+      - name: Debug Git Logs
+        run: |
+          git log --oneline -n 5  # Display the latest 5 commits
