--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -64,17 +64,21 @@ jobs:
           # Run the Node.js script
           node retrieve-password.js
 
-      - name: Check for File Changes and Commit
+      - name: Check for File Changes
         run: |
-          # Check if the password file was changed
+          # Check if the file is being detected as changed
           git status
+
+      - name: Commit the Changes
+        run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add selected_password.txt
-          git status  # Check staging status
+          git status  # Check if the file is staged correctly
           git commit -m "Update selected password" || echo "No changes to commit"
           git push || echo "Push failed"
 
       - name: Debug Git Logs
         run: |
-          git log --oneline -n 5  # Display the latest 5 commits
+          # Display last 5 commits
+          git log --oneline -n 5
