--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -51,6 +51,7 @@ jobs:
               // Save the password to a file
               fs.writeFileSync('selected_password.txt', weeklyPassword);
               console.log("Password saved to selected_password.txt");
+              process.exit(0);  # Ensure the script exits after completion
             } else {
               console.error("No password found at /Data/Password/1.");
               process.exit(1); // Exit with error code for GitHub Actions
@@ -61,14 +62,14 @@ jobs:
           });
           EOF
 
-          # Run the Node.js script
+          # Run the Node.js script and force it to exit
           node retrieve-password.js
 
       - name: Check for File Changes
         run: |
           # Check if the file is being detected as changed
           git status
-
+          
       - name: Commit the Changes
         run: |
           git config --local user.email "action@github.com"
@@ -82,3 +83,6 @@ jobs:
         run: |
           # Display last 5 commits
           git log --oneline -n 5
+
+      - name: Timeout
+        run: sleep 10
