--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -51,7 +51,7 @@ jobs:
               // Save the password to a file
               fs.writeFileSync('selected_password.txt', weeklyPassword);
               console.log("Password saved to selected_password.txt");
-              process.exit(0);  # Ensure the script exits after completion
+              process.exit(0);  // Ensure the script exits after completion
             } else {
               console.error("No password found at /Data/Password/1.");
               process.exit(1); // Exit with error code for GitHub Actions
