--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -70,19 +70,16 @@ jobs:
           # Check if the file is being detected as changed
           git status
           
-      - name: Commit the Changes
+      - name: Commit and Push Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}@github.com/WarBird115/PixelWar.git
           git add selected_password.txt
-          git status  # Check if the file is staged correctly
-          git commit -m "Update selected password" || echo "No changes to commit"
-          git push || echo "Push failed"
+          git commit -m "Update selected password"
+          git push
 
       - name: Debug Git Logs
         run: |
           # Display last 5 commits
           git log --oneline -n 5
-
-      - name: Timeout
-        run: sleep 10
