--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -2,8 +2,8 @@ name: Update Password
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # This runs every Sunday at 00:00 UTC
-  workflow_dispatch:     # Allows manual triggering of the workflow
+    - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   update-password:
@@ -16,7 +16,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Ensure compatibility with your Node.js script
+          node-version: '18'
 
       - name: Install Firebase Admin SDK
         run: npm install firebase-admin
@@ -25,12 +25,12 @@ jobs:
         env:
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
-          # Create a Node.js script to retrieve password from Firebase
+          # Create a Node.js script to retrieve the password
           cat << 'EOF' > retrieve-password.js
           const admin = require('firebase-admin');
           const fs = require('fs');
 
-          // Parse the service account JSON from environment variable
+          // Parse the service account JSON from the environment variable
           const serviceAccount = JSON.parse(process.env.FIREBASE_SERVICE_ACCOUNT_KEY);
 
           // Initialize Firebase Admin SDK
@@ -42,44 +42,45 @@ jobs:
           // Reference to Firebase Realtime Database
           const db = admin.database();
 
-          // Retrieve the weekly password from the second entry in the "Password" object
-          db.ref('/Data/Password/1').once('value', (snapshot) => {
-            const weeklyPassword = snapshot.val();
-            console.log("Weekly password:", weeklyPassword);
-            
-            if (weeklyPassword) {
-              // Save the password to a file
-              fs.writeFileSync('selected_password.txt', weeklyPassword);
-              console.log("Password saved to selected_password.txt");
-              process.exit(0);  // Ensure the script exits after completion
-            } else {
-              console.error("No password found at /Data/Password/1.");
-              process.exit(1); // Exit with error code for GitHub Actions
-            }
-          }).catch((error) => {
-            console.error("Error retrieving password:", error);
-            process.exit(1); // Exit with error code for GitHub Actions
-          });
+          // Retrieve the weekly password
+          db.ref('/Data/Password/1').once('value')
+            .then((snapshot) => {
+              const weeklyPassword = snapshot.val();
+              if (weeklyPassword) {
+                fs.writeFileSync('selected_password.txt', weeklyPassword);
+                console.log("Password saved to selected_password.txt:", weeklyPassword);
+              } else {
+                console.error("No password found at /Data/Password/1.");
+                process.exit(1); // Exit with error code
+              }
+            })
+            .catch((error) => {
+              console.error("Error retrieving password:", error);
+              process.exit(1); // Exit with error code
+            });
           EOF
 
-          # Run the Node.js script and force it to exit
+          # Run the Node.js script
           node retrieve-password.js
 
-      - name: Check for File Changes
+      - name: Verify Selected Password File
         run: |
-          # Check if the file is being detected as changed
-          git status
-          
-      - name: Commit and Push Changes
+          if [ ! -f "selected_password.txt" ]; then
+            echo "Error: selected_password.txt not found!"
+            exit 1
+          fi
+
+      - name: Clean Up Untracked Changes
+        run: |
+          # Discard untracked changes (e.g., node_modules) to avoid conflicts
+          git clean -fdX
+
+      - name: Commit and Push Password Update
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git remote set-url origin https://github-actions:${{ secrets.GH_TOKEN }}@github.com/WarBird115/PixelWar.git
           git add selected_password.txt
-          git commit -m "Update selected password"
+          git commit -m "Update weekly password"
           git push
-
-      - name: Debug Git Logs
-        run: |
-          # Display last 5 commits
-          git log --oneline -n 5
