--- a/.github/workflows/update-password.yml
+++ b/.github/workflows/update-password.yml
@@ -10,17 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout Repository
       - name: Checkout Repository
-        uses: actions/checkout@v3  # Update to the latest version
+        uses: actions/checkout@v3  # Ensures the repository is accessible for the workflow
 
+      # Step 2: Set Up Node.js
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'  # Use Node.js version 18 for compatibility with Firebase Admin SDK
 
+      # Step 3: Install Dependencies
       - name: Install Firebase Admin SDK
         run: npm install firebase-admin
 
+      # Step 4: Retrieve Weekly Password from Firebase
       - name: Retrieve Weekly Password from Firebase
         env:
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
@@ -36,7 +40,7 @@ jobs:
           // Initialize Firebase Admin SDK
           admin.initializeApp({
             credential: admin.credential.cert(serviceAccount),
-            databaseURL: "https://pixelwarnew-default-rtdb.europe-west1.firebasedatabase.app/"  // Replace with your database URL
+            databaseURL: "https://pixelwarnew-default-rtdb.europe-west1.firebasedatabase.app/"
           });
 
           // Reference to Firebase Realtime Database
@@ -57,24 +61,32 @@ jobs:
             .catch((error) => {
               console.error("Error retrieving password:", error);
               process.exit(1); // Exit with error code
+            })
+            .finally(() => {
+              db.goOffline(); // Ensure the database connection is closed
+              process.exit(0); // Exit the script
             });
           EOF
 
           # Run the Node.js script
           node retrieve-password.js
 
+      # Step 5: Verify the Password File
       - name: Verify Selected Password File
         run: |
           if [ ! -f "selected_password.txt" ]; then
             echo "Error: selected_password.txt not found!"
             exit 1
+          else
+            echo "Password file verified successfully."
           fi
 
+      # Step 6: Clean Up Untracked Changes
       - name: Clean Up Untracked Changes
         run: |
-          # Discard untracked changes (e.g., node_modules) to avoid conflicts
-          git clean -fdX
+          git clean -fdX  # Removes untracked files to avoid conflicts
 
+      # Step 7: Commit and Push Password Update
       - name: Commit and Push Password Update
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
